fixed alignment issue with menu icon in header

--- a/style.css
+++ b/style.css
@@ -223,8 +223,6 @@
 
   section{
     padding: var(--padding-d-mc-v) var(--padding-d-mc-h);
-    height: 100%;
-    width: 100%;
   }
 
   img{
@@ -238,6 +236,7 @@
       padding: var(--padding-d-m-v) var(--padding-d-l-h);
       display: flex;
       justify-content: space-between;
+      align-items: center;
       column-gap: 2rem;
       position: relative;
       width: 100vw;
@@ -262,7 +261,7 @@
     .header__nav--menu-icon{
       display: flex;
       align-items: center;
-      font-size: var(--font-size-d-l);
+      font-size: var(--font-size-d-mc);
     }
 
     .header__nav--menu-icon i{
@@ -422,7 +421,7 @@
 
 .hero__content--email-link{
   position: absolute;
-  bottom: 25rem;
+  bottom: 20rem;
   font-size: var(--font-size-d-m);
 }
 .hero__content--email-link span{
@@ -634,12 +633,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin: 0 2rem; */
+
   }
   
   .skills__list--item{
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     gap: 2rem;
     padding: var(--padding-d-s-v);
@@ -710,7 +708,7 @@
 
 .portfolio__card--content__para{
   color: var(--color-secondary);
-  font-family: var(--font-family-content-m);
+  font-family: var(--font-family-content);
   font-size: var(--font-size-d-m);
 }
 
